difflabs/iac/eugene-database/database/securitygroup.tf
# Create a security group for the EC2 instance
resource "aws_security_group" "eugene_database_sg" {
  name        = "eugene-database-sg"
  description = "Allow NEO4J and SSH traffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "ssh"
  }

  ingress {
    from_port   = 7687
    to_port     = 7687
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "neo4j database"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.base_tags, {
    Name = "eugene-database-sg",
    workloadName = var.workload_name
  })
}
